--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@ Here is a list for my own knowledge. Since this is a demo I'll be using this as 
 </ul>
 
 <p>
-<img src="URL" alt="Shown when image cannot load">
+<img src="Thudner_driving.png" alt="Shown when image cannot load">
 </p>
-
+This image was captured by my dash-cam. It doesn't Thunder&Lightning like you'd think in "Thunder Bay" but this is strill a great shot. 
 
 <p>
 Here is a great song about my hometown, Thunder Bay. 
