--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Here is a list for my own knowledge. Since this is a demo I'll be using this as 
 </ul>
 
 <p>
-<img src="Thudner_driving.png" alt="Shown when image cannot load">
+<img src="Thunder_driving.png" width=100% alt="Shown when image cannot load">
 </p>
 This image was captured by my dash-cam. It doesn't Thunder&Lightning like you'd think in "Thunder Bay" but this is strill a great shot. 
 
