--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ This webpage is also hosted by Davide Marchese.
 
 <p>
 Here is how to add an image
-<img src="nosm_intro_photo.jpg" width="200" height="310" alt="Shown when image cannot load">
+<img src="nosm_intro_photo.jpg" width="200" height="310" alt="Image cannot load">
 </p>
 
 <p>
@@ -56,7 +56,7 @@ Here is a list for my own knowledge. Since this is a demo I'll be using this as 
 </ul>
 
 <p>
-<img src="Thunder_driving.png" style="width:60%" alt="Shown when image cannot load">
+<img src="Thunder_driving.png" alt="Image cannot load">
 </p>
 This image was captured by my dash-cam. It doesn't Thunder&Lightning like you'd think in "Thunder Bay" but this is strill a great shot. 
 
