--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Here is how to add an image
 Hi There!
 </p>
 <p>
-I am the host of this webpage, and my full name is above. I go by David instead of Davide to keep it simple. "davide" is pronouced (Da.veed), it is a name of French origin; is very common in Europe. I myself am of Italian ethnicity. The name was passed on to me in order to honour my grandfather, who was also Davide Marchese. As was his grandfather. Likewise, my father Stefano, was named after his grandfather, and so on. 
+I am the host of this webpage, and my full name is above. I go by David instead of Davide to keep it simple. "Davide" is pronouced (Da.veed), it is a name of French origin; is very common in Europe. I myself am of Italian ethnicity. The name was passed on to me in order to honour my grandfather, who was also Davide Marchese. As was his grandfather. Likewise, my father Stefano, was named after his grandfather, and so on. 
 </p>
 
 <p>
@@ -53,6 +53,8 @@ Here is a list for my own knowledge. Since this is a demo I'll be using this as 
 
 <li> Contact Me
 </li>
+  <li> How to play the jynx game
+</li>
 </ul>
 
 <p>
@@ -66,5 +68,12 @@ Here is a great song about my hometown, Thunder Bay.
 
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/mrqg1oqfg_Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+  How to play the Jynx Game:
+    1. Say a word or phrase at the exact moment sombody else says the aforemetioned word
+    2. They can no longer talk until the curse is broken.
+        i) <t> to break a curse, 2021 edition, say their name 10 times
+        ii) <t> make sure your pronounce their name correctly, or else they may not be able to talk
+        iii) <t> for the 2022 edition, use their name in a meanignful way, such as in a sentence. Dont just spam it. 
+    
  </body>
 </html>
