--- a/index.html
+++ b/index.html
@@ -67,13 +67,14 @@ Here is a great song about my hometown, Thunder Bay.
 </p>
 
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/mrqg1oqfg_Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+<p>
   How to play the Jynx Game:
-    1. Say a word or phrase at the exact moment sombody else says the aforemetioned word
-    2. They can no longer talk until the curse is broken.
-        i) <t> to break a curse, 2021 edition, say their name 10 times
-        ii) <t> make sure your pronounce their name correctly, or else they may not be able to talk
-        iii) <t> for the 2022 edition, use their name in a meanignful way, such as in a sentence. Dont just spam it. 
+  </p>
+   <p> 1. Say a word or phrase at the exact moment sombody else says the aforemetioned word </p>
+   <p> 2. They can no longer talk until the curse is broken.
+     <p>.tab { text-indent:5% }   i) <t> to break a curse, 2021 edition, say their name 10 times
+    <p>.tab { text-indent:40px }    ii) <t> make sure your pronounce their name correctly, or else they may not be able to talk
+      <p>.tab { text-indent:40px }  iii) <t> for the 2022 edition, use their name in a meanignful way, such as in a sentence. Dont just spam it. 
     
  </body>
 </html>
