--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@ Here is a great song about my hometown, Thunder Bay.
   How to play the Jynx Game:
   </p>
    <p> 1. Say a word or phrase at the exact moment sombody else says the aforemetioned word </p>
-   <p> 2. They can no longer talk until the curse is broken.
-     <p>.tab { text-indent:5% }   i) <t> to break a curse, 2021 edition, say their name 10 times
-    <p>.tab { text-indent:40px }    ii) <t> make sure your pronounce their name correctly, or else they may not be able to talk
-      <p>.tab { text-indent:40px }  iii) <t> for the 2022 edition, use their name in a meanignful way, such as in a sentence. Dont just spam it. 
-    
+    <p> 2. They can no longer talk until the curse is broken. </p>
+    <p>.tab { text-indent:5% }   i)to break a curse, 2021 edition, say their name 10 times</p>
+    <p>.tab { text-indent:40px }    ii) make sure your pronounce their name correctly, or else they may not be able to talk</p>
+      <p>.tab { text-indent:40px }  iii) for the 2022 edition, use their name in a meanignful way, such as in a sentence. Dont just spam it. </p>
+    <p>test
  </body>
 </html>
