--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@ h1 {
 This webpage is also hosted by Davide Marchese.
 
 <p>
-Here is how to add an image
+Here is myself:
 <img src="nosm_intro_photo.jpg" width="200" height="310" alt="Image cannot load">
 </p>
-
+<p>
+Here is my buddy, ches master Dan: 
+<img src="IMG_6551.jpg" width="200" height="310" alt="Image cannot load">
+</p>
 <p>
 Hi There!
 </p>
