--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@ Here is myself:
 <img src="nosm_intro_photo.jpg" width="200" height="310" alt="Image cannot load">
 </p>
 <p>
-Here is my buddy, chess master Dan: 
-<img src="IMG_6551.JPG" width="200" height="310" alt="Image cannot load">
+Here is my buddy, chess master Dan:
+</p>
+<p>    
+<img src="IMG_6551.JPG" width=50% alt="Image cannot load">
 </p>
 <p>
 Hi There!
