--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
 <img src="img_bandmember.jpg" alt="Image Improperly Displayed" style="width:60%">
 -->
 Resume available 
-<a href="test_file.zip" download>here</a>
+<a href="IMG_6551.JPG" download>here</a>
 </div>
 
 <div class="w3-third">
 <!--
 <img src="img_bandmember.jpg" alt="Image Improperly Displayed" style="width:60%">
 -->
-<a href="elite_smash_first.jpg" download>CV available here</a>
+<a href="elite_smash_first.JPG" download>CV available here</a>
 </div>
 
 <div class="w3-third">
