--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="w3-top w3-bar w3-black">
 <a href="#home" class="w3-bar-item w3-button">Home</a>
 <a href="#about" class="w3-bar-item w3-button">About</a>
-<a href="#members" class="w3-bar-item w3-button">Résumé</a>
+<a href="#Résumé" class="w3-bar-item w3-button">Résumé</a>
 <a href="#contact" class="w3-bar-item w3-button">Contact</a>
 <a href="#Gallery" class="w3-bar-item w3-button">Gallery</a>
 </div>
@@ -146,8 +146,6 @@ Stay Tuned!<br>
 <br>
 <img src="map.jpg" class="w3-image" style="width:100%">
 <p class="w3-center w3-padding">
-How to insert hyperlink w new name  
-<a href="https://www.youtube.com" title="HOVER OVER TEXT" target="_blank">HYPERLINK_TEXT</a>
 </p>
 </div>
 
