--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@ w3.slideshow(".slides", 1500);
 <br />
 <p class="w3-left"> Hi there! If you're reading this, you obviously have some connection to who I am. 
 However we met I want to express my happiness that we crossed paths. But you came here for more info. 
-SO, allow me to tell you about myself.
+SO, allow me to tell you about myself. I am a medical student who is passionate about hockey, soccer, technology, math and science. 
+Some of my hobbies include video games, particularly Super Smash Bros. As well I enjoy much time with my partner and our dog, Malibu.
+
+Malibu is named after one of my father's past vehicles. This is a cogntive method designed to associated new material with my father's long-term memory.  
+(He is brain-injured.)
 Lorem ipsum dolor sit amet, consectetur adipiscing elit... 
 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
