--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="w3-top w3-bar w3-black">
 <a href="#home" class="w3-bar-item w3-button">Home</a>
 <a href="#about" class="w3-bar-item w3-button">About</a>
-<a href="#Résumé" class="w3-bar-item w3-button">Résumé</a>
+<a href="#Résumé" class="w3-bar-item w3-button">Résumé </a>
 <a href="#contact" class="w3-bar-item w3-button">Contact</a>
 <a href="#Gallery" class="w3-bar-item w3-button">Gallery</a>
 </div>
@@ -66,11 +66,20 @@ w3.slideshow(".slides", 1500);
 However we met I want to express my happiness that we crossed paths. But you came here for more info. 
 SO, allow me to tell you about myself. I am a medical student who is passionate about hockey, soccer, technology, math and science. 
 Some of my hobbies include video games, particularly Super Smash Bros. As well I enjoy much time with my partner and our dog, Malibu.
-
+<br />
+<br />
 Malibu is named after one of my father's past vehicles. This is a cogntive method designed to associated new material with my father's long-term memory.  
 (He is brain-injured.)
-Lorem ipsum dolor sit amet, consectetur adipiscing elit... 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+<br />
+<br />
+I am a proud to say I'm from 
+<a href="https://www.youtube.com/watch?v=mrqg1oqfg_Y" title="My Home Town - Westfort Films" target="_blank">I am a proud to say I'm from Thunder Bay.</a> 
+(Born and raised.) 
+<br />
+Follow the link for a wonderful song made by locals about Thunder Bay. 
+<br />
+<br />
+MORE TEXT TO COME. HAVE SUGGESTIONS? PLS TEXT ME.</p>
 </div>
 
 <!-- Resume-->
@@ -82,25 +91,29 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
 <!--
 <img src="img_bandmember.jpg" alt="Image Improperly Displayed" style="width:60%">
 -->
-Resume available 
-<a href="IMG_6551.JPG" download>here</a>
+Download my resume  
+<a href="Resume - Davide Marchese - April 2022.docx" download>here</a>
+<p style="color:grey">Last Updated: April 2022</p>
 </div>
 
 <div class="w3-third">
 <!--
 <img src="img_bandmember.jpg" alt="Image Improperly Displayed" style="width:60%">
 -->
-<a href="elite_smash_first.JPG" download>CV available here</a>
+Download my CV 
+<a href="CV  - Davide Marchese - April 2022.docx" download>here</a>
+<p style="color:grey">Last Updated: April 2022</p>
 </div>
 
 <div class="w3-third">
 <!--
 <img src="img_bandmember.jpg" alt="Image Improperly Displayed" style="width:60%">
 -->
-Connect with me on 
-<a href="https://www.youtube.com/watch?v=iik25wqIuFo" title="Definitely not a Rick Roll" target="_blank">LinkedIn</a> ! 
+Learn solid state physics by reading 
+<a href="FINAL_2_MSc_Marchese.pdf" download>my Master's thesis</a>
 <br />
-<p style="color:grey">Just kidding! I don't have that.</p>
+<p style="color:grey">Ok, ok. I admit it probably won't teach you anything but 
+how else to write "download here" three times without making it boring</p>
 </div>
 
 </div>
@@ -148,11 +161,17 @@ Stay Tuned!<br>
 </p>
 
 <br>
-<img src="map.jpg" class="w3-image" style="width:100%">
-<p class="w3-center w3-padding">
-</p>
+<!--
+<img src="closing photo.jpg" class="w3-image" style="width:100%">
+-->
+<p class="w3-center w3-padding"> </p>
+
 </div>
 
+<!---
+Code to add a url to a website:
+<a href="URL WITH HTTPS" title="BEFORE YOU CLICK link TEXT PREVIEW" target="_blank">TEXT THAT IS UNDERLINED</a>  
+-->
 <!-- End Content -->
 </div>
 
