--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <title>Med Student: Davide M's Personal Website | About David, CV and photogallery</title>
 	<!--this becomes the text in the browser tab -->
-
+ <link rel="icon" type="image/x-icon" href="favicon_leafs_100DBD_transparent_2_TML.ico">
+	<!-- Favicon must be after title element -->
 <meta name="viewport" content="width=device-width,initial-scale=1">
 	<!-- EXPLAIN -->
 <link rel="stylesheet" href="Stylesheet.css">
@@ -44,14 +45,14 @@ This webpage is hosted and coded by Davide Marchese ©2022.
 There is currently no other content in "Home".
 
 
-<!-- UN COMMENT THIS OUT LATER. Also, images are not going nicely to edges
+<!-- UN COMMENT THIS OUT LATER. Also, images are not going nicely to edges-->
 <img class="slides" src="elite_smash_first.jpg" width="100%">
 <img class="slides" src="nosm_intro_photo.jpg" width="100%">
 <img class="slides" src="Thunder_driving.PNG" width="100%">
 <script>
 w3.slideshow(".slides", 1500);
 </script>
--->
+
 
 <!-- About -->
 <div id="about" class="w3-container w3-padding-32">
@@ -62,66 +63,61 @@ w3.slideshow(".slides", 1500);
 	<!-- Really title = heading1 = <h1> -->
 <p class="w3-container w3-left w3-padding-12"> About Myself: </p>
 <br />
+<img src="nosm_intro_photo.jpg" width="200" height="310" alt="Shown when image cannot load">
 <p class="w3-left"> Hi there! If you're reading this, you obviously have some connection to who I am. 
 However we met I want to express my happiness that we crossed paths. But you came here for more info. 
-SO, allow me to tell you about myself. I am a medical student who is passionate about hockey, soccer, technology, math and science. 
-Some of my hobbies include video games, particularly Super Smash Bros. As well I enjoy much time with my partner and our dog, Malibu.
+SO, allow me to tell you about myself. I am a medical student who is passionate about hockey, soccer, technology, math, and science. 
+Some of my hobbies include video games, particularly Super Smash Bros. As well, I enjoy passing time with my partner and our dog, Malibu.
 <br />
 <br />
-Malibu is named after one of my father's past vehicles. This is a cogntive method designed to associated new material with my father's long-term memory.  
+Malibu is named after one of my father's past vehicles. This is a cogntive method designed to associate new material with my father's long-term memory.  
 (He is brain-injured.)
 <br />
 <br />
-<a href="https://www.youtube.com/watch?v=mrqg1oqfg_Y" title="My Home Town - Westfort Films" target="_blank">I am a proud to say I'm from Thunder Bay.</a> 
+<a href="https://www.youtube.com/watch?v=mrqg1oqfg_Y" title="My Home Town - Westfort Films" target="_blank">I am proud to say I'm from Thunder Bay.</a> 
 (Born and raised.) 
 <br />
 Follow the link for a wonderful song made by locals about Thunder Bay. 
 <br />
 <br />
+I also want to shoutout some very cool friends from medical school. Especially Seb Labelle. He's a toilet seat fan but he's really not that bad... good even. Haha JK he's great. Very caring and funny. Wait till you hear the guy say "Pacinian"...But he is right! Its 'Pa~chini'. I know as well he will be able to find my easter egg no problem becuase he has great attention to detail
+but also because he knows his stuff when it comes to this easter egg. Also he is the best male chef I've ever met. <br />
 MORE TEXT TO COME. HAVE SUGGESTIONS? PLS TEXT ME.</p>
 </div>
 
 <!-- Resume-->
 <div id="Résumé" class="w3-container w3-padding-32">
 <h2 class="w3-center">Résumé</h2>
-<div class="w3-row w3-center">
+<div class="w3-row w3-center w3-light-gray">
 
 <div class="w3-third">
-<!--
-<img src="img_bandmember.jpg" alt="Image Improperly Displayed" style="width:60%">
--->
 Download my resume  
 <a href="Resume - Davide Marchese - April 2022.docx" download>here</a>
 <p style="color:grey">Last Updated: April 2022</p>
 </div>
 
 <div class="w3-third">
-<!--
-<img src="img_bandmember.jpg" alt="Image Improperly Displayed" style="width:60%">
--->
 Download my CV 
 <a href="CV - Davide Marchese - April 2022.docx" download>here</a>
 <p style="color:grey">Last Updated: April 2022</p>
 </div>
 
 <div class="w3-third">
-<!--
-<img src="img_bandmember.jpg" alt="Image Improperly Displayed" style="width:60%">
--->
 Learn solid state physics by reading 
 <a href="FINAL_2_MSc_Marchese.pdf" download>my Master's thesis</a>
-<br />
+</div>
+</div>
+
+<div class="w3-third w3-right">
 <p style="color:grey">Ok, ok. I admit it probably won't teach you anything but 
 how else to write "download here" three times without making it boring</p>
 </div>
 
 </div>
-</div>
 
 <!-- Contact -->
 <div id="contact" class="w3-container w3-center w3-padding-32">
 <h2 class="w3-wide">Contact</h2>
-Thunder Bay, ON<br>
 Phone: 807 630 2287<br>
 Email: dmarchese@nosm.ca<br>
 <p class="w3-opacity w3-center"><i><b>Have Comments? Email Me!</i></b>
@@ -151,21 +147,96 @@ You have to
 -->
 
 <!-- Gallery -->
-<div id="Gallery" class="w3-container w3-center w3-padding-32">
+<div id="Gallery" class="w3-container w3-center w3-padding-32 w3-light-gey">
 <h2 class="w3-wide">Gallery</h2>
 No Pictures Yet.<br>
 Stay Tuned!<br>
 <br>
 <p class="w3-opacity w3-center">
 </p>
-
+<!--
+<img src="img_bandmember.jpg" alt="Image Improperly Displayed" style="width:60%">
+-->
 <br>
+<div class="w3-row">
+<div class="w3-quarter w3-container">
+<p>
+Caption 1.
+</p>
+</div>
+
+<div class="w3-quarter w3-container">
+<p>
+Caption 2
+</p>
+</div>
+
+<div class="w3-quarter w3-container">
+<p>
+Habs Suck. Ps this is not the easter egg seb
+</p>
+</div>
+</div>
+<div class="w3-row">
+<div class="w3-third w3-container">
+<p>
+Caption 4
+</p>
+</div>
+
+<div class="w3-third w3-container">
+<p>
+Caption 5
+</p>
+</div>
+
+<div class="w3-third w3-container">
+<p>
+Habs Suck. Ps this is not the easter egg seb
+</p>
+</div>
+</div><div class="w3-row">
+<div class="w3-third w3-container">
+<p>
+Caption 7
+</p>
+</div>
+
+<div class="w3-third w3-container">
+<p>
+Caption 8
+</p>
+</div>
+
+<div class="w3-third w3-container">
+<p>
+Habs Suck. Ps this is not the easter egg seb
+</p>
+</div>
+</div>
 <!--
 <img src="closing photo.jpg" class="w3-image" style="width:100%">
 -->
 <p class="w3-center w3-padding"> </p>
 
 </div>
+
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
 
 <!---
 Code to add a url to a website:
