--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!--to do: add leafs favicon-->
-
 <!DOCTYPE html>
 <html lang="en">
 	<!-- Set the language. For autotranslation -->
@@ -46,11 +44,11 @@ There is currently no other content in "Home".
 
 
 <!-- UN COMMENT THIS OUT LATER. Also, images are not going nicely to edges-->
-<img class="slides" src="elite_smash_first.jpg" width="100%">
-<img class="slides" src="nosm_intro_photo.jpg" width="100%">
-<img class="slides" src="Thunder_driving.PNG" width="100%">
+<img class="slides" src="elite_smash_first.jpg" width="50%">
+<img class="slides" src="nosm_intro_photo.jpg" width="25%">
+<img class="slides" src="Thunder_driving.PNG" width="50%">
 <script>
-w3.slideshow(".slides", 1500);
+w3.slideshow(".slides", 2000);
 </script>
 
 
@@ -173,77 +171,76 @@ Caption 2
 
 <div class="w3-quarter w3-container">
 <p>
-Habs Suck. Ps this is not the easter egg seb
+caption 3
 </p>
 </div>
-</div>
-<div class="w3-row">
-<div class="w3-third w3-container">
+
+<div class="w3-quarter w3-container">
 <p>
 Caption 4
 </p>
 </div>
+</div>
 
-<div class="w3-third w3-container">
+<div class="w3-row">
+<div class="w3-quarter w3-container">
 <p>
 Caption 5
 </p>
 </div>
 
-<div class="w3-third w3-container">
+<div class="w3-quarter w3-container">
 <p>
-Habs Suck. Ps this is not the easter egg seb
+Caption 6
 </p>
 </div>
-</div><div class="w3-row">
-<div class="w3-third w3-container">
+
+<div class="w3-quarter w3-container">
 <p>
 Caption 7
 </p>
 </div>
 
-<div class="w3-third w3-container">
+<div class="w3-quarter w3-container">
 <p>
 Caption 8
 </p>
 </div>
+</div>
 
-<div class="w3-third w3-container">
+<div class="w3-row">
+<div class="w3-quarter w3-container">
 <p>
-Habs Suck. Ps this is not the easter egg seb
+Caption 9
+</p>
+</div>
+
+<div class="w3-quarter w3-container">
+<p>
+Caption 10
+</p>
+</div>
+
+<div class="w3-quarter w3-container">
+<p>
+caption 11
+</p>
+</div>
+
+<div class="w3-quarter w3-container">
+<p>
+Caption 12
 </p>
 </div>
 </div>
-<!--
-<img src="closing photo.jpg" class="w3-image" style="width:100%">
--->
-<p class="w3-center w3-padding"> </p>
 
+<!-- Close Gallery Div-->
 </div>
 
+<img src="nanabijou.jpg" class="w3-image" style="width:100%">
 <br />
 <br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-
-<!---
-Code to add a url to a website:
-<a href="URL WITH HTTPS" title="BEFORE YOU CLICK link TEXT PREVIEW" target="_blank">TEXT THAT IS UNDERLINED</a>  
--->
 <!-- End Content -->
 </div>
-
 </body>
 </html>
