--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ There is currently no other content in "Home".
 
 
 <!-- UN COMMENT THIS OUT LATER. Also, images are not going nicely to edges-->
-<img class="slides" src="elite_smash_first.jpg" width="50%">
+<img class="slides" src="elite_smash_first.JPG" width="50%">
 <img class="slides" src="nosm_intro_photo.jpg" width="25%">
 <img class="slides" src="Thunder_driving.PNG" width="50%">
 <script>
@@ -78,8 +78,6 @@ Malibu is named after one of my father's past vehicles. This is a cogntive metho
 Follow the link for a wonderful song made by locals about Thunder Bay. 
 <br />
 <br />
-I also want to shoutout some very cool friends from medical school. Especially Seb Labelle. He's a toilet seat fan but he's really not that bad... good even. Haha JK he's great. Very caring and funny. Wait till you hear the guy say "Pacinian"...But he is right! Its 'Pa~chini'. I know as well he will be able to find my easter egg no problem becuase he has great attention to detail
-but also because he knows his stuff when it comes to this easter egg. Also he is the best male chef I've ever met. <br />
 MORE TEXT TO COME. HAVE SUGGESTIONS? PLS TEXT ME.</p>
 </div>
 
@@ -158,76 +156,93 @@ Stay Tuned!<br>
 <br>
 <div class="w3-row">
 <div class="w3-quarter w3-container">
+
+<img src="brooktrout.JPG" class="w3-image" style="width:100%">
 <p>
-Caption 1.
+(Relatively) MASSIVE freshwater brook trout. This species is endangered.
+The only natural habitat is the North Shore of Superior from Tbay to Nipigon.
 </p>
 </div>
 
 <div class="w3-quarter w3-container">
+<img src="eugene.JPG" class="w3-image" style="width:100%">
 <p>
-Caption 2
+Friendship knows know age.
 </p>
 </div>
 
 <div class="w3-quarter w3-container">
+<img src="silicon-boron.jpg" class="w3-image" style="width:100%">
 <p>
-caption 3
+√3 × √3-R30° boron surface reconstruction of Si(111). 
+Ok basically, this image is a STM image of silicon doped with boron. 
+The bright spaces represent the electron cloud of an extra atom on top, 
+and the dark spots are "divets" where the electron cloud of an associated atom is missing.
 </p>
 </div>
 
 <div class="w3-quarter w3-container">
+<img src="chris.JPG" class="w3-image" style="width:100%">
 <p>
-Caption 4
-</p>
-</div>
-</div>
-
-<div class="w3-row">
-<div class="w3-quarter w3-container">
-<p>
-Caption 5
-</p>
-</div>
-
-<div class="w3-quarter w3-container">
-<p>
-Caption 6
-</p>
-</div>
-
-<div class="w3-quarter w3-container">
-<p>
-Caption 7
-</p>
-</div>
-
-<div class="w3-quarter w3-container">
-<p>
-Caption 8
+The late but great pygmy goat Chris. Also the GOAT.
 </p>
 </div>
 </div>
 
 <div class="w3-row">
 <div class="w3-quarter w3-container">
+<img src="marnergoal.JPG" class="w3-image" style="width:100%">
 <p>
-Caption 9
+You know I love the Leafs. But did you know Marner kissed me through the glass?
 </p>
 </div>
 
 <div class="w3-quarter w3-container">
+<img src="me+matty.GIF" class="w3-image" style="width:100%">
+<p>
+Look closely, this isn't Auston Matthews. Credit to Evan Sas
+</p>
+</div>
+
+<div class="w3-quarter w3-container">
+<img src="crazy_mali.PNG" class="w3-image" style="width:100%">
+<p>
+My Dog, Malibu! Yep, she's a weirdo.
+</p>
+</div>
+
+<div class="w3-quarter w3-container">
+<img src="baby_mali.JPG" class="w3-image" style="width:100%">
+<p>
+Baby Malibu
+</p>
+</div>
+</div>
+
+<div class="w3-row">
+<div class="w3-quarter w3-container">
+<img src="cozy_mali.JPG" class="w3-image" style="width:100%">
+<p>
+"Is there a problem here? I didn't do anything"
+</p>
+</div>
+
+<div class="w3-quarter w3-container">
+<img src="idkwhere.JPG" class="w3-image" style="width:100%">
 <p>
 Caption 10
 </p>
 </div>
 
 <div class="w3-quarter w3-container">
+<img src="mountmckay.JPG" class="w3-image" style="width:100%">
 <p>
 caption 11
 </p>
 </div>
 
 <div class="w3-quarter w3-container">
+<img src="dryden.JPG" class="w3-image" style="width:100%">
 <p>
 Caption 12
 </p>
