--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ and the dark spots are "divets" where the electron cloud of an associated atom i
 <div class="w3-quarter w3-container">
 <img src="chris.JPG" class="w3-image" style="width:100%">
 <p>
-The late but great pygmy goat Chris. Also the GOAT.
+The late but great pygmy goat Chris. Also the GOAT. He was my pet. Goats are very intelligent.
 </p>
 </div>
 </div>
@@ -230,7 +230,7 @@ Baby Malibu
 <div class="w3-quarter w3-container">
 <img src="idkwhere.JPG" class="w3-image" style="width:100%">
 <p>
-Caption 10
+Caption 10: Kind of a placeholder photo
 </p>
 </div>
 
@@ -244,7 +244,7 @@ caption 11
 <div class="w3-quarter w3-container">
 <img src="dryden.JPG" class="w3-image" style="width:100%">
 <p>
-Caption 12
+View of Lake Wabigoon in Dryden, ON
 </p>
 </div>
 </div>
