--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Learn solid state physics by reading
 
 <div class="w3-third w3-right">
 <p style="color:grey">Ok, ok. I admit it probably won't teach you anything but 
-how else to write "download here" three times without making it boring</p>
+how else do I write "download here" three times without making it boring</p>
 </div>
 
 </div>
@@ -145,8 +145,8 @@ You have to
 <!-- Gallery -->
 <div id="Gallery" class="w3-container w3-center w3-padding-32 w3-light-gey">
 <h2 class="w3-wide">Gallery</h2>
-No Pictures Yet.<br>
-Stay Tuned!<br>
+<br>
+<br>
 <br>
 <p class="w3-opacity w3-center">
 </p>
@@ -237,14 +237,14 @@ Caption 10: Kind of a placeholder photo
 <div class="w3-quarter w3-container">
 <img src="mountmckay.JPG" class="w3-image" style="width:100%">
 <p>
-caption 11
+View of Tbay from Mount Mckay.
 </p>
 </div>
 
 <div class="w3-quarter w3-container">
 <img src="dryden.JPG" class="w3-image" style="width:100%">
 <p>
-View of Lake Wabigoon in Dryden, ON
+View of Lake Wabigoon in Dryden, ON. This photo is too large. I will update soon.
 </p>
 </div>
 </div>
