--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ The only natural habitat is the North Shore of Superior from Tbay to Nipigon.
 <div class="w3-quarter w3-container">
 <img src="eugene.JPG" class="w3-image" style="width:100%">
 <p>
-Friendship knows know age.
+Friendship knows no age.
 </p>
 </div>
 
