--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@ This webpage is hosted and coded by Davide Marchese ©2022.
 There is currently no other content in "Home".
 
 
-<!-- UN COMMENT THIS OUT LATER. Also, images are not going nicely to edges-->
+<!-- UN COMMENT THIS OUT LATER. Also, images are not going nicely to edges
 <img class="slides" src="elite_smash_first.JPG" width="50%">
 <img class="slides" src="nosm_intro_photo.jpg" width="25%">
 <img class="slides" src="Thunder_driving.PNG" width="50%">
 <script>
 w3.slideshow(".slides", 2000);
 </script>
-
+-->
 
 <!-- About -->
 <div id="about" class="w3-container w3-padding-32">
@@ -78,7 +78,7 @@ Malibu is named after one of my father's past vehicles. This is a cogntive metho
 Follow the link for a wonderful song made by locals about Thunder Bay. 
 <br />
 <br />
-MORE TEXT TO COME. HAVE SUGGESTIONS? PLS TEXT ME.</p>
+More to come. Have Suggestions... ...Please contact me..</p>
 </div>
 
 <!-- Resume-->
