--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Learn solid state physics by reading
 
 <div class="w3-third w3-right">
 <p style="color:grey">Ok, ok. I admit it probably won't teach you anything but 
-how else do I write "download here" three times without making it boring</p>
+writing "download here" three times is a tad dry.</p>
 </div>
 
 </div>
