--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ and the dark spots are "divets" where the electron cloud of an associated atom i
 <div class="w3-quarter w3-container">
 <img src="chris.JPG" class="w3-image" style="width:100%">
 <p>
-The late but great pygmy goat Chris. Also the GOAT. He was my pet. Goats are very intelligent.
+The late but great pygmy goat Chris. Also the GOAT. He was my pet. Goats are <i>very</i> intelligent.
 </p>
 </div>
 </div>
