--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@ View of Tbay from Mount Mckay.
 </div>
 
 <div class="w3-quarter w3-container">
-<img src="dryden.JPG" class="w3-image" style="width:100%">
+<img src="MountainBay.JPG" class="w3-image" style="width:100%">
 <p>
-View of Lake Wabigoon in Dryden, ON. This photo is too large. I will update soon.
+Lake Superior - Summer 2017
 </p>
 </div>
 </div>
