--- a/index.html
+++ b/index.html
@@ -114,14 +114,16 @@ writing "download here" three times is a tad dry.</p>
 <!-- Contact -->
 <div id="contact" class="w3-container w3-center w3-padding-32">
 <h2 class="w3-wide">Contact</h2>
-Phone: 807 630 2287<br>
-Email: dmarchese@nosm.ca<br>
+Phone: REMOVED DUE TO SPAM<br>
+Email: REMOVED DUE TO SPAM<br>
 <p class="w3-opacity w3-center"><i><b>Have Comments? Email Me!</i></b>
 <br />
-One day if I learn how to code in PHP, I may add a fillable contact form directly to this webpage.
+<!--
+*One day if I learn how to code in PHP, I may add a fillable contact form directly to this webpage.
 <br />
 Saving the user message is non-trivial.
 </p>
+-->
 
 <!-- 
 <form action="/action_page.php" target="_blank">
