--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ You have to
 
 <img src="brooktrout.JPG" class="w3-image" style="width:100%">
 <p>
-(Relatively) MASSIVE freshwater brook trout. This species is endangered.
+(Relatively) Massive brook trout. This species is endangered.
 The only natural habitat is the North Shore of Superior from Tbay to Nipigon.
 </p>
 </div>
@@ -225,7 +225,7 @@ Baby Malibu
 <div class="w3-quarter w3-container">
 <img src="cozy_mali.JPG" class="w3-image" style="width:100%">
 <p>
-"Is there a problem here? I didn't do anything"
+"Is there a problem here?"
 </p>
 </div>
 
