--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ Baby Malibu
 <div class="w3-quarter w3-container">
 <img src="idkwhere.JPG" class="w3-image" style="width:100%">
 <p>
-Caption 10: Kind of a placeholder photo
+Made by my classmate! Check out her charity @ <a href="birchandbeads.ca" > birchandbeads.ca</a>
 </p>
 </div>
 
