--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ Baby Malibu
 <div class="w3-quarter w3-container">
 <img src="idkwhere.JPG" class="w3-image" style="width:100%">
 <p>
-Made by my classmate! Check out her charity @ <a href="https://birchandbeads.ca" > birchandbeads.ca</a>
+Made by my classmate! Check out her charity @<a href="https://birchandbeads.ca" target="_blank" rel="noopener noreferrer"> birchandbeads.ca</a>
 </p>
 </div>
 
