--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ Baby Malibu
 </div>
 
 <div class="w3-quarter w3-container">
-<img src="brain.PNG" class="w3-image" style="width:100%">
+<img src="brain.png" class="w3-image" style="width:100%">
 <p>
 Made by my classmate! Check out her charity @<a href="https://birchandbeads.ca" target="_blank" rel="noopener noreferrer"> birchandbeads.ca</a>
 </p>
