--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ w3.slideshow(".slides", 2000);
 <!-- About -->
 <div id="about" class="w3-container w3-padding-32">
 
-<h1 class="w3-center w3-black">Davide Marchese - Year 3 Medical Student</h1>
+<h1 class="w3-center w3-black">Davide Marchese - Year 3.5 Medical Student</h1>
 <h3 class="w3-center w3-light-gray"> NOSM University, West Campus - Thunder Bay</h3>
 	<!-- This becomes the 'title' of the about section-->
 	<!-- Really title = heading1 = <h1> -->
@@ -230,7 +230,7 @@ Baby Malibu
 </div>
 
 <div class="w3-quarter w3-container">
-<img src="brain.png" class="w3-image" style="width:100%">
+<img src="brain.PNG" class="w3-image" style="width:100%">
 <p>
 Made by my classmate! Check out her charity @<a href="https://birchandbeads.ca" target="_blank" rel="noopener noreferrer"> birchandbeads.ca</a>
 </p>
