--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ The late but great pygmy goat Chris. Also the GOAT. He was my pet. Goats are <i>
 <div class="w3-quarter w3-container">
 <img src="marnergoal.JPG" class="w3-image" style="width:100%">
 <p>
-You know I love the Leafs. But did you know Marner kissed me through the glass?
+Did you know Marner kissed me through the glass?
 </p>
 </div>
 
@@ -230,7 +230,7 @@ Baby Malibu
 </div>
 
 <div class="w3-quarter w3-container">
-<img src="brain.PNG" class="w3-image" style="width:100%">
+<img src="brain.png" class="w3-image" style="width:100%">
 <p>
 Made by my classmate! Check out her charity @<a href="https://birchandbeads.ca" target="_blank" rel="noopener noreferrer"> birchandbeads.ca</a>
 </p>
