--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <br />
 Scroll down or use the naviation bar to see more.
 <br />
-This webpage is hosted and coded by Davide Marchese ©2022.
+This webpage is hosted and coded by Davide Marchese ©2023.
 <br />
 There is currently no other content in "Home".
 
@@ -55,14 +55,14 @@ w3.slideshow(".slides", 2000);
 <!-- About -->
 <div id="about" class="w3-container w3-padding-32">
 
-<h1 class="w3-center w3-black">Davide Marchese - Year 3.5 Medical Student</h1>
+<h1 class="w3-center w3-black">Davide Marchese - 4th Year Medical Student</h1>
 <h3 class="w3-center w3-light-gray"> NOSM University, West Campus - Thunder Bay</h3>
 	<!-- This becomes the 'title' of the about section-->
 	<!-- Really title = heading1 = <h1> -->
 <p class="w3-container w3-left w3-padding-12"> About Myself: </p>
 <br />
 <img src="nosm_intro_photo.jpg" width="200" height="310" alt="Shown when image cannot load">
-<p class="w3-left"> Hi there! If you're reading this, you obviously have some connection to who I am. 
+<p class="w3-left"> Hey! If you're reading this, you obviously have some connection to who I am. 
 However we met I want to express my happiness that we crossed paths. But you came here for more info. 
 SO, allow me to tell you about myself. I am a medical student who is passionate about hockey, soccer, technology, math, and science. 
 Some of my hobbies include video games, particularly Super Smash Bros. As well, I enjoy passing time with my partner and our dog, Malibu.
@@ -88,14 +88,14 @@ More to come. Have Suggestions... ...Please contact me..</p>
 
 <div class="w3-third">
 Download my resume  
-<a href="Resume - Davide Marchese - April 2022.docx" download>here</a>
-<p style="color:grey">Last Updated: April 2022</p>
+<a href="Resume - Davide Marchese - August 2023.pdf" download>here</a>
+<p style="color:grey">Last Updated: August 2023</p>
 </div>
 
 <div class="w3-third">
 Download my CV 
-<a href="CV - Davide Marchese - April 2022.docx" download>here</a>
-<p style="color:grey">Last Updated: April 2022</p>
+<a href="CV - Davide Marchese - August 2023.docx" download>here</a>
+<p style="color:grey">Last Updated: August 2023</p>
 </div>
 
 <div class="w3-third">
