--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 <link rel="stylesheet" href="Stylesheet.css">
 <script src="https://www.w3schools.com/lib/w3.js"></script>
 	<!-- Consider deleting: what is this java script for -->
-.hide {
+<style>
+	.hide {
   display: none;
 }
 .myDIV:hover + .hide {
   display: block;
   color: blue;
 }
+</style>
 <body>
 
 <!-- Navigation (Stays on Top) -->
