--- a/index.html
+++ b/index.html
@@ -159,13 +159,11 @@ You have to
 <!-- Gallery -->
 <div id="Gallery" class="w3-container w3-center w3-padding-32 w3-light-gey">
 <h2 class="w3-wide">Gallery</h2>
-<br>
-<p class="w3-opacity w3-center">
-</p>
+<!-- <br> -->
+<p class="w3-opacity w3-center"> </p>
 <!--
 <img src="img_bandmember.jpg" alt="Image Improperly Displayed" style="width:60%">
 -->
-<br>
 <div class="w3-row">
 <div class="w3-quarter w3-container">
 
