--- a/index.html
+++ b/index.html
@@ -42,13 +42,11 @@
 </ div>
 <!-- MOVE THE SLIDESHOW TEXT HERE SO IT GOES RIGHT UNDER THE NAV BAR -->
 
-<br />
-<br />
+
 Scroll down or use the naviation bar to see more.
-<br />
 This webpage is hosted and coded by Davide Marchese ©2023.
 <br />
-There is currently no other content in "Home".
+There is currently nothing to see in "Home".
 
 
 <!-- UN COMMENT THIS OUT LATER. Also, images are not going nicely to edges
