--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@ More to come. Have Suggestions... ...Please contact me..</p>
 <div class="w3-row w3-center w3-light-gray">
 
 <div class="w3-third">
-Download my resume  
-<a href="Resume - Davide Marchese - August 2023.pdf" download>here</a>
-<p style="color:grey">Last Updated: August 2023</p>
+<!--Download my resume-->  
+<a href="" download>here</a>
+<p style="color:grey">Sorry this document has been removed for the time being. <!--Last Updated: August 2023--></p>
 </div>
 
 <div class="w3-third">
 Download my CV 
-<a href="CV - Davide Marchese - August 2023.docx" download>here</a>
-<p style="color:grey">Last Updated: August 2023</p>
+<a href="CV - March 24 - Davide Marchese.pdf" download>here</a>
+<p style="color:grey">Last Updated: March 2024</p>
 </div>
 
 <div class="w3-third">
