--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ More to come. Have Suggestions... ...Please contact me..</p>
 
 <div class="w3-third">
 <!--Download my resume-->  
-<a href="" download>here</a>
+<a href="" download>Nothing here at the moment</a>
 <p style="color:grey">Sorry this document has been removed for the time being. <!--Last Updated: August 2023--></p>
 </div>
 
@@ -183,10 +183,10 @@ Friendship knows no age.
 <img src="silicon-boron.jpg" class="w3-image" style="width:100%">
 <p>
 √3 × √3-R30° boron surface reconstruction of Si(111). 
-Ok basically, this image is a STM image of silicon doped with boron. 
+<small> Ok basically, this image is a STM image of silicon doped with boron. 
 The bright spaces represent the electron cloud of an extra atom on top, 
 and the dark spots are "divets" where the electron cloud of an associated atom is missing.
-</p>
+</small></p>
 </div>
 
 <div class="w3-quarter w3-container">
