--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@ Friendship knows no age.
 <img src="silicon-boron.jpg" class="w3-image" style="width:100%">
 <p>
 √3 × √3-R30° boron surface reconstruction of Si(111). 
-<small> Ok basically, this image is a STM image of silicon doped with boron. 
+<small> <small><small>Ok basically, this image is a STM image of silicon doped with boron. 
 The bright spaces represent the electron cloud of an extra atom on top, 
 and the dark spots are "divets" where the electron cloud of an associated atom is missing.
-</small></p>
+</small></small></small></p>
 </div>
 
 <div class="w3-quarter w3-container">
